fix overflow bugs mobile navigation menu

--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,8 @@ body.no-scroll {
         position: relative;
 
         transition: transform 600ms ease-in-out;
+
+        overflow: hidden;
     }
 
     .burger {
@@ -288,12 +290,14 @@ body.no-scroll {
 
         transform: translateX(100%);
         transition: all 600ms ease-in-out;
+
+        overflow: hidden;
     }
     .header-primary__nav-list.show {
         position: fixed;
         top: 0;
         bottom: 0;
-        right: -16px;
+        right: 0;
         z-index: 10;
 
         display: flex;
@@ -302,13 +306,16 @@ body.no-scroll {
         gap: 24px;
 
         background-color: var(--clr-neutral-100);
-        width: 256px;
+        max-width: 256px;
+        width: 100%;
         height: 100vh;
         padding-top: 144px;
         padding-inline: 24px;
 
         transform: translateX(0);
         transition: all 600ms ease-in-out;
+
+        overflow-x: hidden;
     }
 
     .header-primary::before {
@@ -316,7 +323,7 @@ body.no-scroll {
         position: absolute;
         inset: 0;
         left: -16px;
-        z-index: 1;
+        z-index: 10;
 
         background-color: var(--clr-neutral-900);
         width: 100vw;
@@ -332,6 +339,11 @@ body.no-scroll {
         opacity: 0.5;
 
         transition: all 800ms ease-in-out;
+    }
+
+    .header-primary.show {
+        overflow: visible;
+        /* overflow-x: hidden; */
     }
 }
 
